# dart-ads

./: .gitignore  .gitmodules  .pubignore  CHANGELOG.md  CLAUDE.md  LICENSE  PARITY.md  README.md  dart_test.yaml  pubspec.yaml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
example/: example.dart
lib/: dart_ads.dart
lib/src/cli/: runner.dart  (+4 more)
test/cli/: base_command_exit_codes_test.dart  value_parsing_test.dart
test/golden/: add_notification_req.hex  add_notification_res.hex  del_notification_req.hex  del_notification_res.hex  notification_stream.hex  read_device_info_req.hex  read_device_info_res.hex  read_req.hex  read_res.hex  read_state_req.hex  read_state_res.hex  read_write_req.hex  read_write_res.hex  sum_read_req.hex  sum_read_res.hex  sum_readwrite_req.hex  sum_readwrite_res.hex  sum_write_req.hex  sum_write_res.hex  sym_handle_req.hex  sym_handle_res.hex  sym_upload_blob.hex  sym_uploadinfo_res.hex  write_control_req.hex  write_control_res.hex  write_req.hex  write_res.hex
test/integration/: ads_client_test.dart  ads_notification_test.dart  ads_parity_test.dart  ams_connection_live_test.dart  cli_action_test.dart  cli_browse_read_test.dart  cli_contract_test.dart  cli_pull_push_test.dart  cli_subscribe_test.dart  cli_write_test.dart  handle_lifecycle_test.dart  notification_parity_test.dart  router_transport_modes_test.dart  socket_transport_test.dart  symbols_test.dart
test/support/: hex.dart  mock_server.dart
test/unit/: ads_client_test.dart  ads_error_test.dart  ams_connection_test.dart  ams_header_test.dart  fake_transport_test.dart  frame_assembler_test.dart  golden_parity_test.dart  hex_support_test.dart  public_api_test.dart  symbols_golden_test.dart  symbols_parse_test.dart  value_codec_test.dart
test_harness/: CMakeLists.txt  dump_golden.cpp  mock_server.cpp
(+187 files in other folders)
